test the comments.

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 {% if site.comments %}
-<script data-isso="//comments.example.tld/"
+<script data-isso="http://smileboywtu.github.io"
         data-isso-css="true"
         data-isso-lang="ru"
         data-isso-reply-to-self="false"
@@ -10,7 +10,7 @@
         data-isso-avatar-bg="#f0f0f0"
         data-isso-avatar-fg="#9abf88 #5698c4 #e279a3 #9163b6 ..."
         data-isso-vote="true"
-        src="//comments.example.tld/js/embed.min.js"></script>
+        src="http://smileboywtu.github.io/js/embed.min.js"></script>
 
 <section id="isso-thread"></section>
 {% endif %}
