add the index.html

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,5 @@
 {% if site.comments %}
+<div></div>
 <script data-isso="http://121.42.178.129:8080/"
         data-isso-css="true"
         data-isso-lang="ru"
@@ -10,7 +11,7 @@
         data-isso-avatar-bg="#f0f0f0"
         data-isso-avatar-fg="#9abf88 #5698c4 #e279a3 #9163b6 ..."
         data-isso-vote="true"
-        src="http://121.42.178.129:8080/js/embed.min.js"></script>
+        src="http://121.42.178.129:8080/js/embed.js"></script>
+<section id="isso-thread" data-title="Foo!"></section>
 
-<section id="isso-thread"></section>
 {% endif %}
