--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,6 @@
 {% if site.comments %}
 <div></div>
-<script data-isso="//comments.smileboywtu.github/"
+<script data-isso="//121.42.178.129/"
         data-isso-css="true"
         data-isso-lang="ru"
         data-isso-reply-to-self="false"
@@ -11,7 +11,7 @@
         data-isso-avatar-bg="#f0f0f0"
         data-isso-avatar-fg="#9abf88 #5698c4 #e279a3 #9163b6 ..."
         data-isso-vote="true"
-        src="//comments.smileboywtu.github/js/embed.js"></script>
+        src="//121.42.178.129/js/embed.js"></script>
 <section id="isso-thread" data-title="Foo!"></section>
 
 {% endif %}
