update the comments template.

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
 <script data-isso="//121.42.178.129:8050/"
         data-isso-css="true"
         data-isso-lang="en"
-        data-isso-reply-to-self="false"
+        data-isso-reply-to-self="true"
         data-isso-max-comments-top="10"
         data-isso-max-comments-nested="5"
         data-isso-reveal-on-click="5"
@@ -13,5 +13,5 @@
         data-isso-vote="true"
         src="//121.42.178.129:8050/js/embed.min.js"
         type="text/javascript"></script>
-<section id="isso-thread" data-title="Foo!"></section>
+<section id="isso-thread" data-title="smile!"></section>
 {% endif %}
