--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,6 @@
 {% if site.comments %}
 <div></div>
-<script data-isso="//121.42.178.129:8050/"
+<script data-isso="//smileboywtu.github.io/"
         data-isso-css="true"
         data-isso-lang="en"
         data-isso-max-comments-top="10"
