--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,5 @@
 {% if site.comments %}
-<div></div>
-<script data-isso="//smileboywtu.github.io/"
+<script
         data-isso-css="true"
         data-isso-lang="en"
         data-isso-max-comments-top="10"
@@ -12,5 +11,9 @@
         data-isso-vote="true"
         src="//121.42.178.129:8050/js/embed.min.js"
         type="text/javascript"></script>
-<section id="isso-thread"></section>
+<div class="demo">
+    <h2>comments</h2>
+    <section id="isso-thread"></section>
+</div>
+
 {% endif %}
