--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 {% if site.comments %}
-<script
+<script data-isso = "//http://smileboywtu.github.io/"
         data-isso-css="true"
         data-isso-lang="en"
         data-isso-max-comments-top="10"
