--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 {% if site.comments %}
-<script data-isso = "//121.42.178.129/comments/"
+<script data-isso = "//121.42.178.129/"
         src="//121.42.178.129/comments/js/embed.min.js"
         type="text/javascript"></script>
 <div class="demo">
