--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,6 @@
 {% if site.comments %}
-<script data-isso = "//121.42.178.129/"
-        src="//121.42.178.129/comments/js/embed.min.js"
+<script data-isso = "//121.42.178.129/isso/"
+        src="//121.42.178.129/isso/js/embed.min.js"
         type="text/javascript"></script>
 <div class="demo">
     <h2>comments(you may not see it)</h2>
