--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 {% if site.comments %}
 
 <div id="wrapper" style="width: 900px; text-align: left; margin-left: auto; margin-right: auto;">
-    <h2>comments(use http)</h2>
+    <h2>Talking Group</h2>
     <section id="isso-thread"></section>
 </div>
 
