--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,9 @@
 {% if site.comments %}
 
-<div id="wrapper">
-    <h2>Talking Board</h2>
+<div class="talk">
+    <h2>
+        Talking Board
+    </h2>
     <section id="isso-thread"></section>
 </div>
 
