--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
-	<script data-isso="//121.42.178.129" src="//121.42.178.129/js/embed.min.js"></script>
+	<script data-isso="//121.42.178.129"
+            data-isso-lang="en"
+            src="//121.42.178.129/js/embed.min.js"></script>
 </head>
