--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,271 +2,79 @@
  * Syntax highlighting styles
  */
 .highlight {
-    background: #ffffcc;
+    background: #fdf6e3;
     @extend %vertical-rhythm;
     .highlighter-rouge & {
-        background: #ffffcc;
+        background: #586e75;
     }
-    .c {
-        color: #60a0b0;
-        font-style: italic;
-    }
-    /* Comment */
-    .err {
-        border: 1px solid #FF0000;
-    }
-    /* Error */
-    .k {
-        color: #007020;
-        font-weight: bold;
-    }
-    /* Keyword */
-    .o {
-        color: #666666;
-    }
-    /* Operator */
-    .cm {
-        color: #60a0b0;
-        font-style: italic;
-    }
-    /* Comment.Multiline */
-    .cp {
-        color: #007020;
-    }
-    /* Comment.Preproc */
-    .c1 {
-        color: #60a0b0;
-        font-style: italic;
-    }
-    /* Comment.Single */
-    .cs {
-        color: #60a0b0;
-        background-color: #fff0f0;
-    }
-    /* Comment.Special */
-    .gd {
-        color: #A00000;
-    }
-    /* Generic.Deleted */
-    .ge {
-        font-style: italic;
-    }
-    /* Generic.Emph */
-    .gr {
-        color: #FF0000;
-    }
-    /* Generic.Error */
-    .gh {
-        color: #000080;
-        font-weight: bold;
-    }
-    /* Generic.Heading */
-    .gi {
-        color: #00A000;
-    }
-    /* Generic.Inserted */
-    .go {
-        color: #808080;
-    }
-    /* Generic.Output */
-    .gp {
-        color: #c65d09;
-        font-weight: bold;
-    }
-    /* Generic.Prompt */
-    .gs {
-        font-weight: bold;
-    }
-    /* Generic.Strong */
-    .gu {
-        color: #800080;
-        font-weight: bold;
-    }
-    /* Generic.Subheading */
-    .gt {
-        color: #0040D0;
-    }
-    /* Generic.Traceback */
-    .kc {
-        color: #007020;
-        font-weight: bold;
-    }
-    /* Keyword.Constant */
-    .kd {
-        color: #007020;
-        font-weight: bold;
-    }
-    /* Keyword.Declaration */
-    .kn {
-        color: #007020;
-        font-weight: bold;
-    }
-    /* Keyword.Namespace */
-    .kp {
-        color: #007020;
-    }
-    /* Keyword.Pseudo */
-    .kr {
-        color: #007020;
-        font-weight: bold;
-    }
-    /* Keyword.Reserved */
-    .kt {
-        color: #902000;
-    }
-    /* Keyword.Type */
-    .m {
-        color: #40a070;
-    }
-    /* Literal.Number */
-    .s {
-        color: #4070a0;
-    }
-    /* Literal.String */
-    .na {
-        color: #4070a0;
-    }
-    /* Name.Attribute */
-    .nb {
-        color: #007020;
-    }
-    /* Name.Builtin */
-    .nc {
-        color: #0e84b5;
-        font-weight: bold;
-    }
-    /* Name.Class */
-    .no {
-        color: #60add5;
-    }
-    /* Name.Constant */
-    .nd {
-        color: #555555;
-        font-weight: bold;
-    }
-    /* Name.Decorator */
-    .ni {
-        color: #d55537;
-        font-weight: bold;
-    }
-    /* Name.Entity */
-    .ne {
-        color: #007020;
-    }
-    /* Name.Exception */
-    .nf {
-        color: #06287e;
-    }
-    /* Name.Function */
-    .nl {
-        color: #002070;
-        font-weight: bold;
-    }
-    /* Name.Label */
-    .nn {
-        color: #0e84b5;
-        font-weight: bold;
-    }
-    /* Name.Namespace */
-    .nt {
-        color: #062873;
-        font-weight: bold;
-    }
-    /* Name.Tag */
-    .nv {
-        color: #bb60d5;
-    }
-    /* Name.Variable */
-    .ow {
-        color: #007020;
-        font-weight: bold;
-    }
-    /* Operator.Word */
-    .w {
-        color: #bbbbbb;
-    }
-    /* Text.Whitespace */
-    .mf {
-        color: #40a070;
-    }
-    /* Literal.Number.Float */
-    .mh {
-        color: #40a070;
-    }
-    /* Literal.Number.Hex */
-    .mi {
-        color: #40a070;
-    }
-    /* Literal.Number.Integer */
-    .mo {
-        color: #40a070;
-    }
-    /* Literal.Number.Oct */
-    .sb {
-        color: #4070a0;
-    }
-    /* Literal.String.Backtick */
-    .sc {
-        color: #4070a0;
-    }
-    /* Literal.String.Char */
-    .sd {
-        color: #4070a0;
-        font-style: italic;
-    }
-    /* Literal.String.Doc */
-    .s2 {
-        color: #4070a0;
-    }
-    /* Literal.String.Double */
-    .se {
-        color: #4070a0;
-        font-weight: bold;
-    }
-    /* Literal.String.Escape */
-    .sh {
-        color: #4070a0;
-    }
-    /* Literal.String.Heredoc */
-    .si {
-        color: #70a0d0;
-        font-style: italic;
-    }
-    /* Literal.String.Interpol */
-    .sx {
-        color: #c65d09;
-    }
-    /* Literal.String.Other */
-    .sr {
-        color: #235388;
-    }
-    /* Literal.String.Regex */
-    .s1 {
-        color: #4070a0;
-    }
-    /* Literal.String.Single */
-    .ss {
-        color: #517918;
-    }
-    /* Literal.String.Symbol */
-    .bp {
-        color: #007020;
-    }
-    /* Name.Builtin.Pseudo */
-    .vc {
-        color: #bb60d5;
-    }
-    /* Name.Variable.Class */
-    .vg {
-        color: #bb60d5;
-    }
-    /* Name.Variable.Global */
-    .vi {
-        color: #bb60d5;
-    }
-    /* Name.Variable.Instance */
-    .il {
-        color: #40a070;
-    }
-    /* Literal.Number.Integer.Long */
+
+    .c { color: #93a1a1 } /* Comment */
+    .err { color: #586e75 } /* Error */
+    .g { color: #586e75 } /* Generic */
+    .k { color: #859900 } /* Keyword */
+    .l { color: #586e75 } /* Literal */
+    .n { color: #586e75 } /* Name */
+    .o { color: #859900 } /* Operator */
+    .x { color: #cb4b16 } /* Other */
+    .p { color: #586e75 } /* Punctuation */
+    .cm { color: #93a1a1 } /* Comment.Multiline */
+    .cp { color: #859900 } /* Comment.Preproc */
+    .c1 { color: #93a1a1 } /* Comment.Single */
+    .cs { color: #859900 } /* Comment.Special */
+    .gd { color: #2aa198 } /* Generic.Deleted */
+    .ge { color: #586e75; font-style: italic } /* Generic.Emph */
+    .gr { color: #dc322f } /* Generic.Error */
+    .gh { color: #cb4b16 } /* Generic.Heading */
+    .gi { color: #859900 } /* Generic.Inserted */
+    .go { color: #586e75 } /* Generic.Output */
+    .gp { color: #586e75 } /* Generic.Prompt */
+    .gs { color: #586e75; font-weight: bold } /* Generic.Strong */
+    .gu { color: #cb4b16 } /* Generic.Subheading */
+    .gt { color: #586e75 } /* Generic.Traceback */
+    .kc { color: #cb4b16 } /* Keyword.Constant */
+    .kd { color: #268bd2 } /* Keyword.Declaration */
+    .kn { color: #859900 } /* Keyword.Namespace */
+    .kp { color: #859900 } /* Keyword.Pseudo */
+    .kr { color: #268bd2 } /* Keyword.Reserved */
+    .kt { color: #dc322f } /* Keyword.Type */
+    .ld { color: #586e75 } /* Literal.Date */
+    .m { color: #2aa198 } /* Literal.Number */
+    .s { color: #2aa198 } /* Literal.String */
+    .na { color: #586e75 } /* Name.Attribute */
+    .nb { color: #B58900 } /* Name.Builtin */
+    .nc { color: #268bd2 } /* Name.Class */
+    .no { color: #cb4b16 } /* Name.Constant */
+    .nd { color: #268bd2 } /* Name.Decorator */
+    .ni { color: #cb4b16 } /* Name.Entity */
+    .ne { color: #cb4b16 } /* Name.Exception */
+    .nf { color: #268bd2 } /* Name.Function */
+    .nl { color: #586e75 } /* Name.Label */
+    .nn { color: #586e75 } /* Name.Namespace */
+    .nx { color: #586e75 } /* Name.Other */
+    .py { color: #586e75 } /* Name.Property */
+    .nt { color: #268bd2 } /* Name.Tag */
+    .nv { color: #268bd2 } /* Name.Variable */
+    .ow { color: #859900 } /* Operator.Word */
+    .w { color: #586e75 } /* Text.Whitespace */
+    .mf { color: #2aa198 } /* Literal.Number.Float */
+    .mh { color: #2aa198 } /* Literal.Number.Hex */
+    .mi { color: #2aa198 } /* Literal.Number.Integer */
+    .mo { color: #2aa198 } /* Literal.Number.Oct */
+    .sb { color: #93a1a1 } /* Literal.String.Backtick */
+    .sc { color: #2aa198 } /* Literal.String.Char */
+    .sd { color: #586e75 } /* Literal.String.Doc */
+    .s2 { color: #2aa198 } /* Literal.String.Double */
+    .se { color: #cb4b16 } /* Literal.String.Escape */
+    .sh { color: #586e75 } /* Literal.String.Heredoc */
+    .si { color: #2aa198 } /* Literal.String.Interpol */
+    .sx { color: #2aa198 } /* Literal.String.Other */
+    .sr { color: #dc322f } /* Literal.String.Regex */
+    .s1 { color: #2aa198 } /* Literal.String.Single */
+    .ss { color: #2aa198 } /* Literal.String.Symbol */
+    .bp { color: #268bd2 } /* Name.Builtin.Pseudo */
+    .vc { color: #268bd2 } /* Name.Variable.Class */
+    .vg { color: #268bd2 } /* Name.Variable.Global */
+    .vi { color: #268bd2 } /* Name.Variable.Instance */
+    .il { color: #2aa198 } /* Literal.Number.Integer.Long */
+
 }
