--- a/css/main.scss
+++ b/css/main.scss
@@ -49,6 +49,5 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting",
-        "comments"
+        "syntax-highlighting"
 ;
