--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,9 +1,6 @@
 {% if site.comments %}
 
-<div class="talk">
-    <h2>
-        Talking Board
-    </h2>
+<div class="comments">
     <section id="isso-thread"></section>
 </div>
 
