--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,20 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="stylesheet" href="{{ "/css/customer/syntax.scss" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/customer/customer.css" | prepend: site.baseurl }}">
+    <!-- bootstrap3 -->
+    <link rel="stylesheet" href="{{ "/css/bootstrap3/css/bootstrap.min.css" | prepend: site.baseurl }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-	<script data-isso="//121.42.178.129"
-            data-isso-lang="en"
-            src="//121.42.178.129/js/embed.min.js"></script>
+    <script data-isso="//121.42.178.129" data-isso-lang="en" src="//121.42.178.129/js/embed.min.js"></script>
+    <!-- bootstrap 3 -->
+    <script src="{{ "/css/bootstrap3/js/jquery-1.12.0.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/css/bootstrap3/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+
 </head>
