--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,13 +15,13 @@
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li>
+                    <li id="id-page-Projects-title">
                         <a href="{{ " /Projects/ " | prepend: site.baseurl }}">Projects</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ " /About/ " | prepend: site.baseurl }}">About</a></li>
+                            <li id="id-page-About-title"><a href="{{ " /About/ " | prepend: site.baseurl }}">About</a></li>
                         </ul>
                     </li>
                 </ul>
