--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,17 +2,22 @@
 layout: default
 ---
 
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<div class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-  </header>
+    <h2 class="post-title">{{ page.title }}</h2>
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
+    <p class="post-meta">
+        <small>
+            <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+                {{ page.date | date: "%b %-d, %Y" }}
+            </time>
+        </small>
+    <p>
 
-  {% include comments.html %}
-  
-</article>
+    <div class="post-content">
+        {{ content }}
+    </div>
+
+    {% include comments.html %}
+
+</div>
