style is done some how.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-<article class="post">
+<article class="page">
 
-  <header class="post-header">
-  </header>
+    <header class="page-header">
+        <h2 class="page-title"> {{ page.title }} <h2>
+    </header>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+    <div class="page-content">
+        {{ content }}
+    </div>
 
 </article>
