--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
     {% if site.comments %}
     <hr>
     <div class="post-comments">
-        <section class="" id="isso-thread"></section>
+        <section id="isso-thread"></section>
     </div>
 
     {% endif %}
