--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         {% include header.html %}
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row default">
                 <div class="col-xs-8">
                     {{ content }}
                 </div>
