--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,16 @@
 <footer class="footer">
-    <div class="container">
-        <p class="text-muted text-left">
-            <small>Copyright (c) 2015 Copyright Smile Boy All Rights Reserved.</small>
-            <a href="https://github.com/{{ site.github_username }}">
-                <span class="icon">{% include icon-github.svg %}</span>
-            </a>
-        </p>
+    <div class="container-fluid">
+        <div class="container row">
+            <div class="col-xs-6">
+                <p class="text-muted text-left">
+                    <small>Copyright (c) 2015 Copyright Smile Boy All Rights Reserved.</small>
+                </p>
+            </div>
+            <div class="col-xs-6">
+                <a href="https://github.com/{{ site.github_username }}">
+                    <span class="icon">{% include icon-github.svg %}</span>
+                </a>
+            </div>
+        </div>
     </div>
 </footer>
