add the github link to dropdown list.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li id="id-page-About-title"><a href="{{ " /About/ " | prepend: site.baseurl }}">About</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="https://github.com/smileboywtu">GitHub</a></li>
                         </ul>
                     </li>
                 </ul>
