--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
         <div class="container-fluid">
             <div class="row default">
-                <div class="col-xs-6">
+                <div class="col-lg-6">
                     {{ content }}
                 </div>
             </div>
