--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="container row">
-            <div class="col-lg-5">
-                <p class="text-muted text-left text-primary">
+            <div class="col-lg-4">
+                <p class="text-muted text-left text-justify">
                     <small>Copyright (c) 2015 Copyright Smile Boy All Rights Reserved.</small>
                 </p>
             </div>
-            <div class="col-lg-1">
+            <div class="col-lg-2">
                 <a href="https://github.com/{{ site.github_username }}">
                     <span class="icon">{% include icon-github.svg %}</span>
                 </a>
