change the colomn to lg.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                     <small>Designed By Smile Boy.</small>
                 </p>
             </div>
-            <div class="col-xs-3">
+            <div class="col-lg-3">
                 <a href="https://github.com/{{ site.github_username }}">
                     <span class="icon">{% include icon-github.svg %}</span>
                 </a>
