--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,7 @@
                             <li id="id-page-About-title"><a href="{{ " /About/ " | prepend: site.baseurl }}">About</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="https://github.com/smileboywtu">GitHub</a></li>
+                            <li><a href="http://smileboywtu.deercv.com">Deer CV</a></li>
                         </ul>
                     </li>
                 </ul>
