start to write recommend system.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,11 @@
                 <div class="col-lg-6">
                     {{ content }}
                 </div>
+                <div class="col-lg-6">
+                    <div id="recommendation">
+                        <p><small> smile's recommendation </small></p>
+                    </div>
+                </div>
             </div>
         </div>
 
