--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,10 +12,21 @@
     <link rel="stylesheet" href="{{ " /css/bootstrap3/css/bootstrap.min.css " | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+    <!-- isso comment system -->
     <script data-isso="//121.42.178.129" data-isso-lang="en" data-isso-css="true" src="//121.42.178.129/js/embed.min.js"></script>
+
     <!-- bootstrap 3 -->
     <script src="{{ " /css/bootstrap3/js/jquery-1.12.0.min.js " | prepend: site.baseurl }}"></script>
     <script src="{{ " /css/bootstrap3/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
+
+    <!-- owner special recommendation -->
+    <script>
+        $.get(
+            "http://121.42.178.129/recommendation",
+            function(data){
+                $('#recommendation').append(data);
+            },"html");
+    </script>
 
     {% if page.title %}
     <script>
