--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,9 @@
                     {{ content }}
                 </div>
                 <div class="col-lg-6">
-                    <div class="recommendation-default" id="recommendation">
+                    <div class="recommendation-default">
+                        <div class="table-responsive" id="recommendation">
+                        </div>
                     </div>
                 </div>
             </div>
