--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,15 @@
 <footer class="footer">
-    <div class="container-fluid">
-        <div class="container row">
-            <div class="col-xs-5">
-                <p class="text-muted text-left text-primary text-justify">
-                    <small>Designed By Smile Boy.</small>
-                </p>
-            </div>
-            <div class="col-xs-1">
-                <a href="https://github.com/{{ site.github_username }}">
-                    <span class="icon">{% include icon-github.svg %}</span>
-                </a>
-            </div>
+    <div class="container">
+
+        <div>
+            <a href="https://github.com/{{ site.github_username }}">
+                <span class="icon">{% include icon-github.svg %}</span>
+            </a>
         </div>
+
+        <div class="text-muted">
+            <small>Designed By Smile Boy.</small>
+        </div>
+
     </div>
 </footer>
