--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+    <!-- style -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600">
+    <link rel="stylesheet" href="{{ " /css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ " /css/customer/syntax.css " | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ " /css/customer/customer.css " | prepend: site.baseurl }}">
     <!-- bootstrap3 -->
