add the artworks

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,11 +18,13 @@
     <!-- isso comment system -->
     <script data-isso="//121.42.178.129" data-isso-lang="en" data-isso-css="true" src="//121.42.178.129/js/embed.min.js"></script>
 
-    <!-- bootstrap 3 -->
+    <!-- jquery -->
     <script src="{{ " /css/bootstrap3/js/jquery-1.12.0.min.js " | prepend: site.baseurl }}"></script>
+    <!-- bootstrap 3 -->
     <script src="{{ " /css/bootstrap3/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
 
     <!-- owner special recommendation -->
+    <!--
     <script>
         $.get(
             "http://121.42.178.129/recommendation/music",
@@ -30,6 +32,7 @@
                 $('#recommendation').append(data);
             },"html");
     </script>
+    -->
 
     {% if page.title %}
     <script>
