--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,9 @@
                     <li id="id-page-Projects-title">
                         <a href="{{ " /Projects/ " | prepend: site.baseurl }}">Projects</a>
                     </li>
+                    <li id="id-page-Artworks-title">
+                        <a href="{{ " /Artworks/ " | prepend: site.baseurl }}">Artworks</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore <span class="caret"></span></a>
                         <ul class="dropdown-menu">
